--- a/SiteEnergiaR/WebContent/CSS/MenuHF.css
+++ b/SiteEnergiaR/WebContent/CSS/MenuHF.css
@@ -3,6 +3,7 @@ ul {
   padding: 28px;
   margin: -8px;
   margin-bottom: 9px;
+  width: 100%;
 }
 
 li {
@@ -13,10 +14,10 @@ ul li a{
   font-family: "Arial";
   font-style: normal;
   font-size:15px;
-  padding: 7px 50px;
+  padding: 7px 30px;
+
   text-decoration: none;
   color:black;
-  text-align: center;
   font-weight: bold;
 }
 
@@ -24,6 +25,7 @@ ul li a{
 .logo img {
 
   margin-left: 30px;
+  margin-right: 50px;
   float: left;
   width: 56px;
   height: 56px;
@@ -38,7 +40,6 @@ ul li a{
   margin-top:5px;
   width:100%;
   height:265px;
-  
   margin-bottom: 15px;
 }
 
