--- a/SiteEnergiaR/WebContent/CSS/SolarHF.css
+++ b/SiteEnergiaR/WebContent/CSS/SolarHF.css
@@ -1,9 +1,12 @@
+body {
+  font-family: arial;
+  font-size: 20;
+}
 ul {
   background-color: #007235;
-  padding: 28px;
+  padding: 30px;
   margin: -8px;
-  margin-bottom: 9px;
-  width: 100%;
+  margin-bottom: 0px;
 }
 
 li {
@@ -31,15 +34,19 @@ ul li a{
   height: 56px;
 }
 
-.img_home img {
+.img_solar img {
   float: right;
-  width: 25%;
-  height: 25%;
+  width: 15%;
+  height: 15%;
 }
+  #solar_1 {
+    float:;
+    width:;
+    height:;
+  }
 .trocaCor {
-  margin-top:5px;
-  width:100%;
-  height:265px;
+  margin-top: 5px;
+  height: 265px;
   margin-bottom: 15px;
 }
 
@@ -47,7 +54,6 @@ ul li a{
   margin: -8px;
   padding: 10px;
   color: white;
-  width:100%;
   height:265px;
   background-color: #048042;
   margin-bottom: 15px;
