--- a/SiteEnergiaR/WebContent/CSS/MenuHF.css
+++ b/SiteEnergiaR/WebContent/CSS/MenuHF.css
@@ -23,8 +23,9 @@ ul li a{
 
   margin-left: 30px;
   margin-right: 50px;
+  margin-top: 5px;
   float: left;
-  width: 56px;
+  width: 110px;
   height: 56px;
 }
 
