--- a/SiteEnergiaR/WebContent/CSS/GeotermicaHF.css
+++ b/SiteEnergiaR/WebContent/CSS/GeotermicaHF.css
@@ -1,9 +1,6 @@
-.img_solar img {
-  float: right;
-  width: 15%;
-  height: 15%;
-}
 .trocaCor {
+  padding-left: 8%;
+  padding-right: 8%;
   margin-top: 5px;
   height: 265px;
   margin-bottom: 15px;
@@ -17,4 +14,25 @@
   background-color: #048042;
   margin-bottom: 15px;
 
+}
+
+h1 {
+  font-size: 24px;
+  font-family: "Arial Black", Gadget;
+}
+
+p.a {
+  font-size: 14px;
+  font-family: "Open Sans", sans-serif;
+}
+
+p.b{
+  font-size: 16px;
+  font-family: "Arial Black", Gadget;
+}
+
+#Geotermica_1 {
+  float: right;
+  width:40%;
+  height:85%;
 }
