--- a/SiteEnergiaR/WebContent/CSS/SolarHF.css
+++ b/SiteEnergiaR/WebContent/CSS/SolarHF.css
@@ -1,4 +1,13 @@
-
+  h1 {
+    font-size: 17px;
+    font-family: 'Open Sans', sans-serif;
+    padding-bottom: 15px;
+  }
+  p {
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+}
   #solar_1 {
     float: right;
     width:30%;
@@ -16,14 +25,55 @@
   }
   #solar_4 {
     float:left;
-    width:20%;
-    height:80%;
-    margin-right: 20px
+    width:25%;
+    height: 60%;
   }
   #solar_5 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 20%;
-    height: 65%;
+    height: 55%;
+
+  }
+  #solar_6 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    height: 100%;
+  }
+
+  #trocaCor_Solar1 {
+    margin: -8px;
+    padding: 10px;
+    color: black;
+    height:265px;
+    background-color: whyte;
+    margin-bottom: 0px;
+  }
+
+  #trocaCor_Solar2 {
+    margin: -8px;
+    padding: 0;
+    height: 350px;
+    color: white;
+    background-color: #110f11;
+  }
+
+  #trocaCor_Solar3 {
+    margin: -8px;
+    padding: 10px;
+    color: white;
+    height:400px;
+    background-color: #048042;
+    margin-bottom: 15px;
+  }
+
+  .trocaCor_Solar2 {
+    margin: -8px;
+    padding: 10px;
+    height: 350px;
+    color: white;
+    background-color: #110f11;
   }
