--- a/SiteEnergiaR/WebContent/CSS/OndasHF.css
+++ b/SiteEnergiaR/WebContent/CSS/OndasHF.css
@@ -15,6 +15,14 @@
   margin-left: 5%;
 }
 
+#onda3 {
+  float: right;
+  width:40%;
+  height:95%;
+  margin-right: 1px;
+  margin-left: 5%;
+
+}
 
 h1 {
   font-size: 24px;
@@ -41,7 +49,7 @@ div b {
   padding-right: 12%;
   height: 265px;
   margin-bottom: 3%;
-  margin-left: 30%;
+
 }
 
 .trocaCor2 {
@@ -50,4 +58,14 @@ div b {
   padding-right: 12%;
   height: 265px;
   margin-bottom: 3%;
+}
+
+.quartaDiv {
+  padding-top: 3%;
+  padding-left: 8%;
+  padding-right: 12%;
+  margin: -8px;
+  height:265px;
+  background-color: #f0f0f0;
+
 }
