--- a/SiteEnergiaR/WebContent/CSS/hidrogenio.css
+++ b/SiteEnergiaR/WebContent/CSS/hidrogenio.css
@@ -141,15 +141,6 @@ div.movLista {
   margin-right: 1%;
 }
 
-#DMFC {
-  margin-top: 3%;
-  font-size: 16px;
-  font-family: 'Open Sans', sans-serif;
-  text-align: ;
-  padding-left: 10%;
-  margin-right: 1%;
-}
-
 #Alcalina {
   margin-top: 10%;
   font-size: 16px;
@@ -166,6 +157,7 @@ div.movLista {
   padding-left: 10%;
   margin-right: 1%;
 }
+
 #Ácido {
   margin-top: 0%;
   font-size: 16px;
@@ -191,14 +183,60 @@ div.movLista {
   margin-right: 1%;
 }
 
-#mebrana {
+#PEMFC {
+  margin-right: 15%;
+  padding-left: 50px;
+  padding-top: 7px;
+  float: right;
+  width:70%;
+  height:70%;
+}
+
+#AFC {
   margin-right: 25%;
   padding-left: 50px;
   padding-top: 7px;
   float: right;
-  width:40%;
-  height:85%;
+  width:50%;
+  height:70%;
 }
+
+#DMFC {
+  margin-right: 15%;
+  padding-left: 50px;
+  padding-top: 10%;
+  float: right;
+  width:75%;
+  height:75%;
+}
+
+#PAFC {
+  margin-right: 25%;
+  padding-left: 50px;
+  padding-top: 10%;
+  float: right;
+  width:60%;
+  height:60%;
+}
+
+#MCFC {
+  margin-right: 25%;
+  padding-left: 50px;
+  padding-top: 10%;
+  float: right;
+  width:60%;
+  height:60%;
+}
+
+#SOFC {
+  margin-right: 25%;
+  padding-left: 50px;
+  padding-top: 10%;
+  float: right;
+  width:60%;
+  height:60%;
+}
+
 
 #usina {
   margin-right: -10%;
