--- a/SiteEnergiaR/WebContent/CSS/hidrogenio.css
+++ b/SiteEnergiaR/WebContent/CSS/hidrogenio.css
@@ -8,7 +8,7 @@
   margin-bottom: 0px;
 }
 .trocaCor1 {
-  padding-top: 4%;
+  padding-top: 2%;
   padding-bottom: 20%;
   padding-left: 12%;
   padding-right: 12%;
@@ -18,24 +18,37 @@
 }
 
 .trocaCorTeste {
-  margin: -8px;
-  padding: 10px;
+  margin-top: 2%;
+  padding-top: 0%;
   color: white;
   height: 50%;
   background-color: #048042;
-  margin-bottom: 15px;
+  margin-bottom: 3%;
   text-align: right;
+  padding-left: 12%;
+  padding-right: 12%;
+  padding-bottom: 9%;
+}
+
+.divCelulas {
+  margin: -8px;
+  padding: 5%;
+  color: white;
+  height: 50%;
+  background-color: #048042;
+  padding-bottom: 35%;
+  text-align: left;
   padding-left: 12%;
   padding-right: 12%;
 }
 
-.trocaCor3 {
+div.trocaCor3 {
   margin: -8px;
-  padding-top: : 10px;
-  height:05%;
+  padding-top: 10px;
   background-color: #f0f0f0;
   padding-left: 12%;
   padding-right: 12%;
+  padding-bottom: 20%;
 }
 
 h1 {
@@ -64,7 +77,8 @@ h3.tituloDiv2{
   font-size: 20px;
   font-family: 'Open Sans', sans-serif;
   text-align: right;
-  margin-right: 12%;
+  margin-right: 3%;
+  padding-top: 5%;
 }
 
 p.textoDiv2{
@@ -72,8 +86,8 @@ p.textoDiv2{
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
   text-align: center;
-  padding-left: 50%;
-  margin-right: 1%;
+  padding-left: 55%;
+  margin-right: -8%;
   line-height: 190%;
 }
 
@@ -132,6 +146,50 @@ div.movLista {
   margin-top: 100%;
 }
 
+p.textoCelulas {
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+  padding-right: 00%;
+}
+
+#Titulocelulas1 {
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+  color: #DCDCDC;
+}
+
+#Titulocelulas2 {
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+  color: #DCDCDC;
+}
+
+#Titulocelulas3 {
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+  color: #DCDCDC;
+}
+
+#Titulocelulas4 {
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+  color: #DCDCDC;
+}
+
+#Titulocelulas5 {
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+  color: #DCDCDC;
+}
+
+
+
 #Membrana {
   margin-top: 3%;
   font-size: 16px;
@@ -184,55 +242,50 @@ div.movLista {
 }
 
 #ccmpp {
-  margin-right: 15%;
-  padding-left: 50%;
+  margin-right: -5%;
+  padding-left: -5%;
   padding-top: 0%;
-  float: right;
-  width:90%;
-  height:90%;
+  float: center;
+  width:100%;
+  height:100%;
 }
 
 #cca {
-  margin-right: 15%;
-  padding-left: 50%;
+  margin-right: -5%;
+  padding-left: -5%;
   padding-top: 0%;
-  float: right;
-  width:90%;
-  height:90%;
+  float: center;
+  width:100%;
+  height:100%;
 }
 
 #ccos {
-  margin-right: 15%;
-  padding-left: 50%;
+  margin-right: -5%;
+  padding-left: -5%;
   padding-top: 0%;
-  float: right;
-  width:90%;
-  height:90%;
+  float: center;
+  width:100%;
+  height:100%;
 }
 
 #ccaf {
-  margin-right: 5%;
-  padding-left: 20%;
+  margin-right: 15%;
+  padding-left: 15%;
   padding-top: 0%;
-  float: left;
-  width:90%;
-  height:90%;
+  float: center;
+  width:100%;
+  height:100%;
 }
 
 
 #cccf {
-  margin-right: 55%;
-  padding-left: 20%;
+  margin-left: : 15%;
+  padding-left: 15%;
   padding-top: 0%;
-  float: left;
-  width:90%;
-  height:90%;
-
+  float: center;
+  width:100%;
+  height:100%;
 }
-
-
-
-
 
 
 #usina {
@@ -247,11 +300,11 @@ div.movLista {
 
 #clicoh2o {
   margin-left: -3%;
-  padding-left: 50px;
-  padding-top: 0px;
+  padding-left: 10px;
+  padding-top: 1.5%;
   float: left;
-  width:40%;
-  height:100%;
+  width:50%;
+  height:130%;
 }
 #terceiraImagem {
   margin-right: -15%;
