--- a/SiteEnergiaR/WebContent/CSS/hidrogenio.css
+++ b/SiteEnergiaR/WebContent/CSS/hidrogenio.css
@@ -17,7 +17,13 @@
   margin-bottom: 55%;
 }
 
-.trocaCorTeste {
+.textoCor1 {
+  padding-right: 0%;
+  padding-left: 5%;
+}
+
+
+div.trocaCor2 {
   margin-top: 2%;
   padding-top: 0%;
   color: white;
@@ -26,7 +32,7 @@
   margin-bottom: 3%;
   text-align: right;
   padding-left: 12%;
-  padding-right: 12%;
+  padding-right: 0%;
   padding-bottom: 9%;
 }
 
@@ -36,7 +42,7 @@
   color: white;
   height: 50%;
   background-color: #048042;
-  padding-bottom: 35%;
+  padding-bottom: 15%;
   text-align: left;
   padding-left: 12%;
   padding-right: 12%;
@@ -48,7 +54,7 @@ div.trocaCor3 {
   background-color: #f0f0f0;
   padding-left: 12%;
   padding-right: 12%;
-  padding-bottom: 20.8%;
+  padding-bottom: 18.8%;
 }
 
 h1 {
@@ -74,11 +80,11 @@ p.b1{
 
 h3.tituloDiv2{
   margin-top: 5%;
-  font-size: 20px;
+  font-size: 22px;
   font-family: 'Open Sans', sans-serif;
   text-align: right;
-  margin-right: 3%;
-  padding-top: 5%;
+  padding-right: 15%;
+  padding-top: 8%;
 }
 
 p.textoDiv2{
@@ -87,8 +93,8 @@ p.textoDiv2{
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   padding-left: 55%;
-  margin-right: -8%;
-  line-height: 190%;
+  padding-right: 5%;
+  line-height: 290%;
 }
 
 p.a3 {
@@ -246,8 +252,8 @@ p.textoCelulas {
   padding-left: -5%;
   padding-top: 0%;
   float: center;
-  width:100%;
-  height:100%;
+  width:95%;
+  height:115%;
 }
 
 #cca {
@@ -255,8 +261,8 @@ p.textoCelulas {
   padding-left: -5%;
   padding-top: 0%;
   float: center;
-  width:100%;
-  height:100%;
+  width:95%;
+  height:115%;
 }
 
 #ccos {
@@ -264,8 +270,8 @@ p.textoCelulas {
   padding-left: -5%;
   padding-top: 0%;
   float: center;
-  width:100%;
-  height:100%;
+  width:95%;
+  height:115%;
 }
 
 #ccaf {
@@ -273,8 +279,8 @@ p.textoCelulas {
   padding-left: 15%;
   padding-top: 0%;
   float: center;
-  width:100%;
-  height:100%;
+  width:95%;
+  height:115%;
 }
 
 
@@ -283,8 +289,8 @@ p.textoCelulas {
   padding-left: 15%;
   padding-top: 0%;
   float: center;
-  width:100%;
-  height:100%;
+  width:95%;
+  height:115%;
 }
 
 
@@ -301,7 +307,7 @@ p.textoCelulas {
 #clicoh2o {
   margin-left: -3%;
   padding-left: 10px;
-  padding-top: 1.5%;
+  padding-top: 1%;
   float: left;
   width:50%;
   height:130%;
@@ -317,9 +323,9 @@ p.textoCelulas {
 
 #sustentavel {
   margin-left: -3%;
-  padding-left: 05%;
-  padding-top:0%;
+  padding-left: 7%;
+  padding-top:4%;
   float: center;
   width:90%;
-  height:80%;
+  height:100%;
 }
