--- a/SiteEnergiaR/WebContent/CSS/Paginas.css
+++ b/SiteEnergiaR/WebContent/CSS/Paginas.css
@@ -10,11 +10,7 @@
 
 /* ----------------------------------------------------------------CSS GEOTERMICA---------------------------------------------------------------- */
 
-h1 {
-  font-size: 24px;
-  font-family: 'Open Sans', sans-serif;
-  padding-bottom: 15px;
-}
+
 
 .a1 {
   font-size: 14px;
@@ -291,6 +287,16 @@ h1 {
 
 
 /* ----------------------------------------------------------------CSS SOLAR---------------------------------------------------------------- */
+
+.primeiraDiv {
+  padding-top: 3%;
+  padding-left: 12%;
+  padding-right: 12%;
+  margin-top: 5px;
+  height: 265px;
+  margin-bottom: 10%;
+
+}
 
 
   #solar_1 {
