--- a/SiteEnergiaR/WebContent/CSS/MenuHF.css
+++ b/SiteEnergiaR/WebContent/CSS/MenuHF.css
@@ -9,6 +9,10 @@ ul {
   margin-bottom: 9px;
 }
 
+ul li a:hover:not(.active){
+  color: #d3d3d3;
+}
+
 h1 {
   font-size: 24px;
   font-family: 'Open Sans', sans-serif;
@@ -25,9 +29,17 @@ ul li a{
   font-size:15px;
   padding: 7px 30px;
   text-decoration: none;
-  color:black;
+  color:white;
   font-weight: bold;
 }
+
+.active {
+  background-color: #2E8B57;
+  padding: 28px;
+  margin: -8px;
+  margin-bottom: 9px;
+}
+
 
 .logo img {
 
