--- a/SiteEnergiaR/WebContent/CSS/MenuHF.css
+++ b/SiteEnergiaR/WebContent/CSS/MenuHF.css
@@ -4,10 +4,11 @@ body {
   font-family: 'Open Sans', sans-serif;
   position: relative;
   margin: 0;
+  min-width: 1500px;
+
 }
 
 ul {
-
 
   background-color: #007235;
   padding: 28px;
@@ -80,8 +81,7 @@ ul li a{
 }
 
 .trocaCor3 {
-
-
+  margin-bottom: -12px;
   padding: 10px;
   height:395px;
   background-color: #f0f0f0;
@@ -92,7 +92,6 @@ ul li a{
 footer {
   color: white;
 
-  bottom:0;
   height: 165px;
   background-color: black;
 }
