--- a/SiteEnergiaR/WebContent/CSS/Paginas.css
+++ b/SiteEnergiaR/WebContent/CSS/Paginas.css
@@ -1,6 +1,97 @@
 
 
 /* ----------------------------------------------------------------CSS PAGINA APP---------------------------------------------------------------- */
+.fundo {
+  margin-top: -15px;
+  margin-left: -9px;
+  margin-right: -9px;
+  padding-bottom: 15%;
+}
+
+.appIntroducao {
+  width: 99%;
+  margin-top: 5px;
+  margin-left: 8px;
+}
+
+.titulo {
+  padding-top: 40px;
+  font-family: 'Open Sans', sans-serif;
+  }
+
+#brain {
+  padding-right: 15px;
+  padding-left: 20%;
+  margin-top: 20px;
+  float: left;
+  width:15%;
+  height:25%;
+}
+
+.subTexto {
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+}
+
+.subTitulo {
+  padding-top: 100px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+}
+
+.app1 {
+  padding-top: 10%;
+  padding-bottom: 5%;
+}
+
+#game1 {
+  padding-right: 35px;
+  padding-left: 150px;
+  padding-top: 150px;
+  float: left;
+  width:18%;
+  height:45%;
+}
+
+.luzTextsubDir {
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+}
+
+.luzTextDir {
+  padding-top: 260px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: left;
+}
+
+.app2 {
+  padding-bottom: 5%;
+}
+
+#game2 {
+  padding-right: 150px;
+  padding-left: 35px;
+  padding-top: 200px;
+  float: right;
+  width:18%;
+  height:45%;
+}
+
+.luztextsubEsq {
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: right;
+}
+
+.luztextEsq {
+  padding-top: 360px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: right;
+}
+
+
 
 /* ----------------------------------------------------------------CSS BIOMASSA---------------------------------------------------------------- */
 
