--- a/SiteEnergiaR/WebContent/CSS/Paginas.css
+++ b/SiteEnergiaR/WebContent/CSS/Paginas.css
@@ -3,8 +3,8 @@
 /* ----------------------------------------------------------------CSS PAGINA APP---------------------------------------------------------------- */
 .fundo {
   background-color: #DCDCDC;
-  margin-top: -15px;
-  padding-bottom: 25%;
+  margin-top: -26px;
+  padding-bottom: 12%;
 }
 
 .appIntroducao {
@@ -14,13 +14,14 @@
 }
 
 .titulo {
+  font-size: 40px;
   padding-top: 40px;
   font-family: 'Open Sans', sans-serif;
   }
 
 #brain {
   padding-right: 15px;
-  padding-left: 20%;
+  padding-left: 15%;
   margin-top: 20px;
   float: left;
   width:15%;
@@ -28,7 +29,7 @@
 }
 
 .subTexto {
-  font-size: 15px;
+  font-size: 20px;
   font-family: 'Open Sans', sans-serif;
   text-align: left;
 }
@@ -54,12 +55,13 @@
 }
 
 .luzTextsubDir {
-  font-size: 15px;
+  font-size: 22px;
   font-family: 'Open Sans', sans-serif;
   text-align: left;
 }
 
 .luzTextDir {
+  font-size: 25px;
   padding-top: 260px;
   font-family: 'Open Sans', sans-serif;
   text-align: left;
@@ -75,12 +77,13 @@
 }
 
 .luztextsubEsq {
-  font-size: 15px;
+  font-size: 22px;
   font-family: 'Open Sans', sans-serif;
   text-align: right;
 }
 
 .luztextEsq {
+  font-size: 25px;
   padding-top: 360px;
   font-family: 'Open Sans', sans-serif;
   text-align: right;
@@ -253,18 +256,17 @@
 .introducao {
   padding-top: 4%;
   padding-bottom: 10%;
-  padding-left: 15%;
-  padding-right: 25%;
-
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
-.txt1 {
+.txtIntroducao {
   font-size: 14px;
   font-family: 'Open Sans', sans-serif;
   text-align: left;
 }
 
-.txt2 {
+.tituloIntroducao {
   font-size: 17px;
   font-family: 'Open Sans', sans-serif;
   text-align: left;
@@ -275,7 +277,6 @@
   background-color: #048042;
   text-align: right;
   padding-left: 12%;
-  padding-bottom: 8%;
 }
 
 h3.textoDiv2{
@@ -295,12 +296,23 @@ h3.textoDiv2{
 
 .tiposCelulas {
   padding-top: 2%;
-  padding-bottom: 20%;
+  padding-bottom: 5%;
   padding-left: 12%;
   padding-right: 12%;
-  margin-top: 10px;
-  height: 50%;
-  margin-bottom: 40%;
+}
+
+.ccmpp {
+  padding-left: 5%;
+  float: center;
+  width:90%;
+  height:115%;
+}
+
+.ccaf {
+  padding-left: 5%;
+  float: center;
+  width:90%;
+  height:115%;
 }
 
 .textoCor1 {
@@ -338,37 +350,17 @@ h3.textoDiv2{
   padding-bottom: 8%;
 }
 
-
-
-.ccmpp {
-  margin-right: -5%;
-  padding-left: -5%;
-  padding-top: 0%;
-  float: center;
-  width:95%;
-  height:115%;
-}
-
-.ccaf {
-  margin-right: 15%;
-  padding-left: 15%;
-  padding-top: 0%;
-  float: center;
-  width:95%;
-  height:115%;
-}
-
 #usina {
-  padding-left: 50px;
-  padding-top: 7px;
+  padding-left: 5%;
+  padding-bottom: 10%;
   float: right;
-  width:40%;
-  height:25%;
+  width:30%;
+  height:30%;
 }
 
 #clicoh2o {
   padding-left: 10px;
-  padding-top: 1.5%;
+  padding-top: 15px;
   float: left;
   width:40%;
   height:50%;
