--- a/SiteEnergiaR/WebContent/CSS/Paginas.css
+++ b/SiteEnergiaR/WebContent/CSS/Paginas.css
@@ -90,24 +90,21 @@
 }
 
 .app3 {
-  padding-left: 20%;
-  padding-right: 20%;
-  padding-top: 20%;
-  height: 50%;
+  padding-top: 200px;
 }
 
 .subtrofeu {
-  padding-left: 25%;
+  padding-left: 250px;
   text-align: right;
-  padding-top: 190px;
+  padding-top: 350px;
   font-family: 'Open Sans', sans-serif;
 }
 
 #trofeu {
-  padding-right: 25%;
-  padding-top: 10%;
+  padding-right: 550px;
+  padding-top: 250px;
   width:15%;
-  height:45%;
+  height:25%;
   float: right;
 }
 
@@ -259,8 +256,8 @@
 .introducao {
   padding-top: 4%;
   padding-bottom: 10%;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
   height: 30%;
 }
 
@@ -268,7 +265,6 @@
   font-size: 14px;
   font-family: 'Open Sans', sans-serif;
   text-align: left;
-  padding-right: 40%;
 }
 
 .tituloIntroducao {
@@ -288,21 +284,18 @@
 
 h3.textoDiv2{
   font-size: 25px;
-  padding-top: 6%;
-}
-
-#textoDiv2 {
-    padding-bottom: 20%;
-    line-height: 180%;
+  padding-top: 3%;
 }
 
 .textoDiv2{
+  margin-top: 1px;
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
-  text-align: left;
-  padding-left: 38%;
+  text-align: center;
+  padding-left: 50%;
   padding-right: 10%;
-  }
+  line-height: 130%;
+}
 
 .tiposCelulas {
   padding-top: 2%;
@@ -389,9 +382,8 @@ h3.textoDiv2{
 }
 
 #usina {
-  padding-top: 1%;
-  padding-left: 15%;
-  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-bottom: 10%;
   float: right;
   width:35%;
   height:90%;
@@ -399,10 +391,10 @@ h3.textoDiv2{
 
 #clicoh2o {
   padding-left: 10px;
-  padding-top: 65px;
+  padding-top: 35px;
   float: left;
-  width:30%;
-  height:85%;
+  width:35%;
+  height:90%;
 }
 
 #sustentavel {
@@ -506,24 +498,14 @@ h3.textoDiv2{
 }
 
 
+
 /* ----------------------------------------------------------------CSS SOLAR---------------------------------------------------------------- */
+
 
 #Solar_Home1 {
  float: right;
  width: 25%;
  height: 110%;
-}
-
-.Botao_Home1 {
-float: left;
-width: 20%;
-height: 50%;
-}
-
-.Botao_Home2 {
-float: right;
-width: 20%;
-height: 50%;
 }
 
 #Botao_Home2 {
@@ -554,6 +536,10 @@ height: 50%;
     float:left;
     width:25%;
     height: 60%;
+    margin: 80px;
+
+
+
   }
 
   #solar_5 {
@@ -574,7 +560,6 @@ height: 50%;
   }
 
   #trocaCor_Solar1 {
-    margin: -8px;
     padding: 10px;
     color: black;
     height:265px;
@@ -583,7 +568,7 @@ height: 50%;
   }
 
   .trocaCor_Solar2 {
-    margin: -8px;
+    margin-bottom: -10px;
     padding: 10px;
     height: 350px;
     color: white;
@@ -591,7 +576,6 @@ height: 50%;
   }
 
   #trocaCor_Solar3 {
-    margin: -8px;
     padding: 10px;
     color: white;
     height:400px;
